# qdrant_canaria_hackaton

./: Cargo.toml  README.md  discovery.json  discovery_search_test_promts.txt
src/: action.rs  actions_collection.rs  embeddings_generator.rs  entity.rs  history_analysis.rs  main.rs  promt_processor.rs  qdrant.rs  scene.rs  scene_object.rs
src/actions/: drop_item.rs  mod.rs  move_direction.rs  move_to_item.rs  take_item.rs
