[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qdrant-client = "1.7"
egui = "0.24"
eframe = "0.24"
egui_extras = { version = "0.24", features = ["image"] }
log = "0.4.20"
egui_logger = "0.4.1"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
